test/compile-fail/resolution/use/renamed-reentrant-tracing/expected.txt
error: unresolved item `d`
  ┌─ ./test/compile-fail/resolution/use/renamed-reentrant-tracing/top.rhdl:1:11
  │
1 │ use a::b::d;
  │           ^ no `d` item in `b`

